<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/group_c_profile_viewer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonJohnRey"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:onClick="goToProfile_JohnRey"
        android:text="@string/john_rey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

    <Button
        android:id="@+id/buttonDaniyal"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        android:onClick="goToProfile_Daniyal"
        android:text="@string/daniyal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

    <Button
        android:id="@+id/buttonMohit"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
            android:onClick="goToProfile_Mohit"
        android:text="@string/mohit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJohnRey"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDaniel"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:text="@string/daniel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDaniyal"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/press_a_button_to_view_their_profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
